# fastapi-api-template

./: .coveragerc  .env.example  .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/api/: base.py
app/core/: config.py
app/db/: database.py
app/test/: conftest.py
